--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,19 +12,60 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:background="#FC9"
-        android:gravity="center">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="50dp"/>
-
+        android:gravity="center"
+        tools:ignore="MissingConstraints">
     </RelativeLayout>
 
     <ImageView
         android:id="@+id/rl"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:contentDescription="@string/todo"/>
+        android:contentDescription="@string/todo"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/editHeading"
+        android:layout_width="240dp"
+        android:layout_height="35dp"
+        android:text="@string/need_services"
+        android:textAlignment="center"
+        android:textSize="25sp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="366dp" />
+
+    <EditText
+        android:id="@+id/edit1"
+        android:layout_width="240dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="112dp"
+        android:layout_marginEnd="71dp"
+        android:layout_marginBottom="300dp"
+        android:autofillHints=""
+        android:background="@android:color/holo_green_light"
+        android:ems="10"
+        android:hint="@string/enter_service_needed_here"
+        android:inputType="textAutoComplete"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.115"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:layout_width="90dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="112dp"
+        android:background="@color/black"
+        android:onClick="submit"
+        android:text="@string/submit"
+        tools:ignore="MissingConstraints,OnClick"
+        tools:layout_editor_absoluteX="53dp"
+        tools:layout_editor_absoluteY="442dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
