--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,9 +17,10 @@
     </RelativeLayout>
 
     <ImageView
-        android:id="@+id/rl"
+        android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="130dp"
+        android:src="@drawable/rnr_hs_shield"
         android:contentDescription="@string/todo"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp"
@@ -32,9 +33,11 @@
         android:text="@string/need_services"
         android:textAlignment="center"
         android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.475"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="366dp" />
+        tools:layout_editor_absoluteX="16dp" />
 
     <EditText
         android:id="@+id/edit1"
@@ -54,18 +57,20 @@
         app:layout_constraintHorizontal_bias="0.115"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.878" />
 
     <Button
-        android:layout_width="90dp"
+        android:layout_width="95dp"
         android:layout_height="50dp"
         android:layout_marginTop="112dp"
         android:background="@color/black"
         android:onClick="submit"
         android:text="@string/submit"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.516"
         tools:ignore="MissingConstraints,OnClick"
-        tools:layout_editor_absoluteX="53dp"
-        tools:layout_editor_absoluteY="442dp" />
+        tools:layout_editor_absoluteX="16dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
